Fix footer on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,7 +20,6 @@
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    spacing: 2;
 }
 
 .footer_content__menu_button {
